# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x161W7NdMHxeBsz9ec8T2KlDepFRPFBf11LZgPZ7lxJ3pA=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xHWel8pi7RV3P3ERIGIgVg301oZEiNMFHYNZkKxDr1o0=',
      'err': 0,
    }),
  ])
# ---
